[package]
name = "CapstoneAudioDemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gp_resonator = { path = "../GPResonatorLibrary/gp_resonator"}
resonator_builder = { path = "../GPResonatorLibrary/resonator_builder"}
wav_util = { path = "../GPResonatorLibrary/wav_util"}
# { git = "https://github.com/Amarantheum/GPResonatorLibrary.git"}
cpal = "0.15.2"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
druid = "0.8.3"
rodio = "0.17.1"